# mce-tools

./: .dockerignore  .env.example  .env.production  ACC_INTEGRATION_README.md  AGENT_DEPLOYMENT_GUIDE.md  AGENT_INTEGRATION_GUIDE.md  AGENT_MODULE_SUMMARY.md  AGENT_QUICKSTART.md  DELIVERY_SUMMARY.txt  DOCKER.md  Dockerfile  README.md  check-schema.mjs  docker-compose.yml  docker-entrypoint.sh  package.json  pnpm-lock.yaml  test-bg-task.mjs  test-consolidation.mjs  test-consolidator-path.mjs  test-unpdf.mjs  todo.md  vite.config.ts
client/: index.html
docs/: ACC_INTEGRATION.md  ACC_INTEGRATION_SETUP.md  CONSOLIDATION_FIXES_2026-02-04.md  MCE_KNOWLEDGE_ENGINE_MASTERPLAN.md  PROJECT_CREATION_STANDARD.md
drizzle/: 0001_panoramic_lenny_balinger.sql  0002_lush_blur.sql  0003_bright_sentinel.sql  0004_concerned_silver_samurai.sql  schema.ts  (+4 more)
knowledge-engine/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
knowledge-engine/alembic/: env.py
knowledge-engine/app/: __init__.py  main.py
knowledge-engine/app/api/: __init__.py
knowledge-engine/app/api/ingestion/: __init__.py  router.py
knowledge-engine/app/api/intelligence/: __init__.py  router.py
knowledge-engine/app/core/: __init__.py  config.py  database.py  dependencies.py
knowledge-engine/app/models/: __init__.py  knowledge.py  schemas.py
knowledge-engine/app/services/: __init__.py  confidence.py  deidentification.py  llm_usage_reporter.py
knowledge-engine/app/tasks/: __init__.py  scheduler.py
knowledge-engine/tests/: __init__.py  test_deidentification.py
(+250 files in other folders)
